Added landing page,Fix UI

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,54 @@
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+}
+.btnhover {
+  transition: transform 0.2s ease; /* Add smooth transition */
+  radius : 40px;
+}
+
+.btnhover:hover {
+  transform: scale(1.05); /* Scale the element on hover */
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.inputborder{
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+.logoshadow{
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(255, 115, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+.parallelogram {
+  width: 50%; /* Ensure it takes up full width of the right side */
+  background-image: url('./assets/hero.png'); /* Set your image URL here */
+  background-size: contain; /* Ensure the entire image is visible */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat; /* Ensure the image doesn't repeat */
+  display: flex; /* Flex for centering text or content */
+  justify-content: center;
+  align-items: center;
+  color: white; /* Text color inside parallelogram */
+}
+
+
+.sidenav{
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+
+.card{
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+}
+
+/* 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +61,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
