--- a/src/index.css
+++ b/src/index.css
@@ -46,8 +46,23 @@
 
 .card{
   box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+  transform: scale(0.9);
+}
+.line{
+  width: full;
+  height: 1px;
+  border-radius: 50px;
+  background-color: rgb(216, 216, 216);
 }
 
+.pcard{
+  transition: 0.2s all;
+  transform: scale(0.9);
+}
+.pcard:hover{
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+  transform: translateY(-10px) scale(0.9);
+}
 /* 
 body {
   margin: 0;
