--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,17 @@
 .btnhover {
   transition: transform 0.2s ease; 
 }
+.qbtn{
+  transition: 0.2s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+  border-radius: 10px;
+  
+}
+.qbtn:hover{
 
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  transform: translateY(-10px) scale(1);
+}
 .btnhover:hover {
   transform: scale(1.05); 
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
