--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,12 @@
   transform: scale(1.05); 
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+.plushover{
+  transition: 0.2s ease;
+}
+.plushover:hover{
+  transform: scale(1.15);
+}
 
 .inputborder{
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
